💄 landing hero section

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
   --pikmin-green: #26d586;
   --pikmin-orange: #ee9c25;
   --pikmin-gray: #dbe3de;
+  --pikmin-white: #faf5e7;
+  --pikmin-black: #030303;
 }
 
 body {
